--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="ShopFront.MainWindow"
+﻿<Window Icon="https://github.com/AndreiSeradou/image/blob/master/img/pc/MaateBook14s.png?raw=true" 
+        x:Class="ShopFront.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,15 +9,20 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Shop" Height="600" Width="950">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="29*"/>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="904*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Operation with product"/>
+        <Label FontWeight="Bold" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Operation with product" Grid.Column="2" Margin="314,0,0,0"/>
 
-        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Margin="5" Name="ShopProduct" IsReadOnly="True">
+        <DataGrid Grid.Row="1" AutoGenerateColumns="False" Margin="5,5,5,5" Name="ShopProduct" IsReadOnly="True" Grid.ColumnSpan="3">
             <DataGrid.Columns>
                 <DataGridTextColumn  Header="Image"  IsReadOnly="True" Binding="{Binding Image}">
                     <DataGridTextColumn.CellStyle>
@@ -62,7 +68,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="1" Grid.ColumnSpan="3" Margin="0,262,0,0" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -98,7 +104,7 @@
 
             <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1" Margin="5">
                 <StackPanel Margin="5">
-                    <Label Content="Add new product" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Update product" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
                     <Grid Margin="5" x:Name="UpdateProductGrid">
                         <Grid.ColumnDefinitions>
